Implement photo upload and update functionality